<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_pin"
        android:menuCategory="secondary"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_24px"
        android:menuCategory="secondary"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/camera_icon"
        android:menuCategory="secondary"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/friends_talking"
        android:menuCategory="secondary"
        android:title="Activity Feed" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:menuCategory="secondary"
        android:title="@string/title_profile" />


</menu>