<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">


    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.beeriq.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_search"
            app:launchSingleTop="true"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_camera_to_navigation_profile"
            app:launchSingleTop="true"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_camera_to_navigation_friendslist"
            app:launchSingleTop="true"
            app:destination="@id/navigation_activities" />
        <action
            android:id="@+id/action_navigation_camera_to_navigation_map"
            app:launchSingleTop="true"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_camera_to_navigation_camera_result"
            app:destination="@id/navigation_camera_result"
            app:popUpTo="@id/navigation_camera"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera_result"
        android:name="com.example.beeriq.ui.camera.CameraResultFragment"
        android:label=""
        tools:layout="@layout/fragment_camera_result">
        <argument
            android:name="beerFullName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera_no_result"
        android:name="com.example.beeriq.ui.camera.CameraNoResultFragment"
        android:label=""
        tools:layout="@layout/fragment_camera_no_result">
    </fragment>

    <fragment
        android:id="@+id/navigation_beer_details"
        android:name="com.example.beeriq.ui.camera.BeerDetailsFragment"
        android:label=""
        tools:layout="@layout/fragment_beer_details">
        <argument
            android:name="beerFullName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.beeriq.ui.beerCategories.BeerSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_camera"
            app:launchSingleTop="true"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_friendslist"
            app:launchSingleTop="true"
            app:destination="@id/navigation_activities" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_profile"
            app:launchSingleTop="true"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_map"
            app:launchSingleTop="true"
            app:destination="@id/navigation_map" />
    </fragment>
    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.beeriq.ui.activities.ActivitiesFragment"
        android:label="Activity Feed"
        tools:layout="@layout/fragment_activities" >
        <action
            android:id="@+id/action_navigation_activities_to_navigation_camera"
            app:launchSingleTop="true"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_activities_to_navigation_search"
            app:launchSingleTop="true"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_activities_to_navigation_profile"
            app:launchSingleTop="true"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_activities_to_navigation_map"
            app:launchSingleTop="true"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.beeriq.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_camera"
            app:launchSingleTop="true"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_profile"
            app:launchSingleTop="true"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_search"
            app:launchSingleTop="true"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_friendslist"
            app:launchSingleTop="true"
            app:destination="@id/navigation_activities" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.beeriq.ui.userprofile.UserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_userprofile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_camera"
            app:launchSingleTop="true"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_map"
            app:launchSingleTop="true"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_search"
            app:launchSingleTop="true"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_friendslist"
            app:launchSingleTop="true"
            app:destination="@id/navigation_activities" />
    </fragment>


    <fragment
        android:id="@+id/showMyBeersFragment"
        android:name="com.example.beeriq.ui.showMyBeers.ShowMyBeersFragment"
        android:label="My Beers"
        tools:layout="@layout/showmybeers">
        <action
            android:id="@+id/action_showMyBeersFragment_to_navigation_beer_details"
            app:destination="@id/navigation_beer_details" />
    </fragment>

    <fragment
        android:id="@+id/ShowMyPostsFragment"
        android:name="com.example.beeriq.ui.MyPosts.MyPostsFragment"
        android:label="My Posts"
        tools:layout="@layout/recycler_my_posts">

    </fragment>

</navigation>